fixed flex gap

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,24 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+aside {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 250px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #0075FF; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+}
+
+nav {
+    height: 80px;
+    width: 100%;
+    background-color: #fff;
+}
+
 .main {
     margin-left: 250px;
     padding-right: 80px;
@@ -17,7 +35,6 @@ body {
 
 .acct-details-row {
     justify-content: space-between;
-    gap: 30px;
 }
 
 .acct-one, .acct-two {
@@ -148,6 +165,11 @@ hr {
 }
 
 @media screen and (max-width: 1370px) {
+
+    .acct-one, .acct-two {
+        margin-right: 30px;
+    }
+
     .fund-btn {
         padding: 15px 35px;
         width: 200px;
@@ -155,6 +177,19 @@ hr {
 }
 
 @media screen and (max-width: 1199.98px) { 
+
+    aside {
+        height: 100%; /* Full-height: remove this if you want "auto" height */
+        width: 200px; /* Set the width of the sidebar */
+        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: #0075FF; /* Black */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 20px;
+    }
+
     .main {
         margin-left: 200px;
         padding-right: 40px;
@@ -167,6 +202,7 @@ hr {
     
     .acct-one, .acct-two {
         width: 300px;
+        margin-right: 20px;
     }
 
     .acct-bal-img, .expense-img {
@@ -235,6 +271,23 @@ hr {
 }
 
 @media screen and (max-width: 768px) { 
+
+    aside {
+        height: 100%; /* Full-height: remove this if you want "auto" height */
+        width: 150px; /* Set the width of the sidebar */
+        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: #0075FF; /* Black */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 20px;
+    }
+
+    nav {
+        height: 60px;
+    }
+
     .main {
         margin-left: 150px;
         padding-right: 30px;
@@ -246,6 +299,7 @@ hr {
     
     .acct-one, .acct-two {
         width: 270px;
+        margin-right: 15px;
     }
 
     .acct-bal-img, .expense-img {
@@ -323,6 +377,11 @@ hr {
 }
 
 @media screen and (max-width: 575px) { 
+
+    nav {
+        height: 50px;
+    }
+
     .main {
         margin-left: 0px;
         padding: 20px;
@@ -336,11 +395,12 @@ hr {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 50px;
     }
     
     .acct-one, .acct-two {
         width: 364px;
+        margin: 0;
+        margin-bottom: 50px;
     }
     
     .acct-bal-img, .expense-img {
